[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"

[project]
name = "lcmeval"
version = "0.1.0"
description = "LCM Evaluation"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pyyaml>=6.0.2",
]

[tool.setuptools]
packages = [
    "lcmeval",
]
